--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -28,7 +28,9 @@ jobs:
 
     - name: Setup Gradle
       uses: gradle/actions/setup-gradle@v3
-      
+      with:
+        gradle-version: '8.5'
+
     - name: Build with Gradle
       run: gradle :app:assembleDebug
 
