--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -25,6 +25,12 @@ jobs:
       with:
         gradle-version: '8.5'
 
+    - name: Grant execute permission for gradlew
+      run: chmod +x gradlew
+
+    - name: Print Signing Report (SHA-1)
+      run: ./gradlew signingReport
+
     - name: Build with Gradle
       run: gradle :app:assembleDebug
 
