--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -26,13 +26,15 @@ jobs:
         gradle-version: '8.5'
 
     - name: Print Signing Report (SHA-1)
+      working-directory: ./android
       run: gradle signingReport
 
     - name: Build with Gradle
+      working-directory: ./android
       run: gradle :app:assembleDebug
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
         name: app-debug
-        path: app/build/outputs/apk/debug/app-debug.apk
+        path: android/app/build/outputs/apk/debug/app-debug.apk
